# assistant-agent

./: main.py  pyproject.toml
config/: .env.example  settings.py
graph/assistant/: builder.py  router.py  state.py
graph/assistant/nodes/: __init__.py  build_response.py  understand_request.py
graph/shared/: graph_names.py
models/: model_loader.py
observability/: langfuse_client.py
prompts/: prompts.py  registry.py
utils/: logger.py
